I8BMKNOW:Upd8d know.ls, removed tipz.ls, fixed up kp8 function in .zshrc, && added an ending 2du comment to .Hrc;

--- a/.Hrc
+++ b/.Hrc
@@ -143,6 +143,6 @@ G           =>   G        => Goo => GuGl => GooGle_punctu8ion_and_oper8orz; # bA
 #   add W3.Org/TR/html5/single-page.html#the-input-element typz,DfIn new minimalist mapz2alInV8z2cnvXpnd2Perl biltinz,considr sepR8ng contXt|nAmspAc|dOmAn,
 #   mAB EvN2ally stuD XtNding4m@2DfIn contXtz:DSLz wiDomainSpecificMultimodeling 2solv (coordin|fragment)8ion problMz; # UsefulDSLzproly rEquIr dOmAnXpertzinpt
 #   NATO phonetic alphabet:Alfa,Bravo,Charlie,Delta,Echo,Foxtrot,Golf,Hotel,India,Juliett,Kilo,Lima,Mike,November,Oscar,Papa,Quebec,Romeo,Sierra,Tango,Uniform,
-#     Victor,Whiskey,X-ray,Yankee,Zulu;Military:Coca Metro Nectar Union Extra;
+#     Victor,Whiskey,X-ray,Yankee,Zulu;Military:Coca Metro Nectar Union Extra; Also aftr ading@lEstAlpha2CountryCodez,addAirport&&topStockXchngCodez2;
 # nOt:PerlFalsTrue:F:0, 000, 0.0, '0', '', (), undef, special fals4neg8d!true (trEtd as '' Evald as strng, 0 as numb); T:All Lse!  Ruby:F:false nil; T:All Lse!
 # Itz sorta confUsng th@mycommasyntax rEsMblz perlhash butRac2ly suprcomaz tryng2BclErlybOth arrAyz&&hashez wi intermED8 col8 lAyrz as anOt8dnew rash d8a objX?
