--- a/.lsrc
+++ b/.lsrc
@@ -1,8 +1,8 @@
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
-# $VERSION='0.0';$d8VS='I8FM1k32'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='I98M76Pr'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
-# This file was gNR8d by `lrc` Vers:0.0 d8VS:I87MFTST on d8:I8FM1oeh. Please edit ~/.lrc and run `lrc` then `src` to see changes;
+# This file was gNR8d by `lrc` Vers:0.0 d8VS:I8QMAdlU on d8:I98M8GO1. Please edit ~/.lrc and run `lrc` then `src` to see changes;
 # nOt:I'm pretty sure itz Chunz(!Takiz)`ls`&&`dircolors`th@cud!hndl (MULTI)?HARDLINK sO rEmMbr2kEp th@ lIn cmNtd out4her(&&kEptstng2cnfirm);
 # Keywords COLOR,OPTIONS,&& EIGHTBIT (honored by Slackware dircolors) are recognized but ignored; TERMz && XtNsionz syncd2 2016;
 # Copyright(C) 1996-2016 FreeSoftwareFound8ion,Inc. Copying and distribution of this file, with or without modific8ion, are permitted provided the
@@ -126,7 +126,6 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .hax                      01;38;5;011
 .emacs                    01;38;5;003
 .vimrc                    01;38;5;011
-.Hrc.                     01;38;5;000
 .Hrc                      01;38;5;010      #  8sh ~ fyl
 .lrc                      01;38;5;010      #  lsd8 lsrc
 .bxrc                     01;38;5;011
@@ -439,6 +438,9 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .ftpquota                 01;38;5;008
 .htaccess                 01;38;5;007
 .forward                  01;38;5;007
+#kk
+#kk
+.prv8                     01;38;5;000;48;5;000;8 # immeD8 overide of just Foregrndcolr to
 #MM
 #MM
 .htm                      01;38;5;013      # HTML && YA?ML && XML && (detailed) play-list filz && .profile && .history filz
@@ -901,7 +903,6 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .pcx                      01;38;5;164
 .pgm                      01;38;5;164
 .png                      01;38;5;164      # Portable Network Graphics
-.png.                     01;38;5;000
 .ppm                      01;38;5;164
 .qt                       01;38;5;164      # QuickTime
 .rm                       01;38;5;164      # Real Media
@@ -918,7 +919,6 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .xpm                      01;38;5;164
 .xwd                      01;38;5;164
 .yuv                      01;38;5;164
-.kdb.                     01;38;5;000
 .kdb                      01;38;5;164      # KeePass  v1 DataBase
 .kdbx                     01;38;5;164      # KeePassX v2 DataBase
 .uot                      01;38;5;164      # LibreOffice Writer  Unified Office format Text
@@ -1309,12 +1309,13 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .13.0-21-generic          01;38;5;172;48;5;004
 .13.0-17-generic          01;38;5;011;48;5;004
 .13.0-16-generic          01;38;5;010;48;5;004 # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.15.0-32-generic          01;38;5;009
-.15.0-30-generic          01;38;5;172
-.15.0-29-generic          01;38;5;011
-.15.0-24-generic          01;38;5;010
-.15.0-23-generic          01;38;5;014
-.15.0-22-generic          01;38;5;012
+.15.0-33-generic          01;38;5;009
+.15.0-32-generic          01;38;5;172
+.15.0-30-generic          01;38;5;011
+.15.0-29-generic          01;38;5;010
+.15.0-24-generic          01;38;5;014
+.15.0-23-generic          01;38;5;012
+.15.0-22-generic          01;38;5;013
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
