--- a/.lsrc
+++ b/.lsrc
@@ -1,8 +1,8 @@
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
-# $VERSION='0.0';$d8VS='IBJLAF39'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='ICUL4lsh'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
-# This file was gNR8d by `lrc` Vers:0.0 d8VS:IA3MALLo on d8:IBJLAV24. Please edit ~/.lrc and run `lrc` then `src` to see changes;
+# This file was gNR8d by `lrc` Vers:0.0 d8VS:IBRL0res on d8:ICUL5lqO. Please edit ~/.lrc and run `lrc` then `src` to see changes;
 # nOt:I'm pretty sure itz Chunz(!Takiz)`ls`&&`dircolors`th@cud!hndl (MULTI)?HARDLINK sO rEmMbr2kEp th@ lIn cmNtd out4her(&&kEptstng2cnfirm);
 # Keywords COLOR,OPTIONS,&& EIGHTBIT (honored by Slackware dircolors) are recognized but ignored; TERMz && XtNsionz syncd2 2016;
 # Copyright(C) 1996-2016 FreeSoftwareFound8ion,Inc. Copying and distribution of this file, with or without modific8ion, are permitted provided the
@@ -22,7 +22,7 @@
 #   Maybe design8 commentz for which extensions should start with which interpret8ion approachez along with following customiz8ion directivez or stRt nw .rc?;
 TERM Eterm
 TERM ansi
-TERM color-xterm                           # H4MM4MM4: `drc -p` now has just "*color*" here
+TERM color-xterm                           # H4MM4MM4:`drc -p` now has just "*color*" here;
 TERM con[0-9]*x[0-9]*                      # l8st`drc -p`uses char-classes&&globz so no need2sprawl so many old varE8ionz (butIstil want2know old Uniquez)
 #ERM con132x25
 #ERM con132x30
@@ -114,7 +114,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .2dy                      01;38;5;011      # .2dy (new ToDyn..amix?)
 .2do                      01;38;5;003      # .2do (old ToDo.ls fylz)
 .2de                      01;38;5;011      # .2de (old 2 Dey -> 2dA)
-.4mtd                     01;38;5;172      # H9NMDKNO: ~/.irssi/ custom-aligned cfg && Dflt.theme filez (trying lower-case 'o' for non-2pal8 orange here)
+.4mtd                     01;38;5;172      # H9NMDKNO:~/.irssi/ custom-aligned cfg && Dflt.theme filez (trying lower-case 'o' for non-2pal8 orange here);
 .cfg                      01;38;5;011
 .cnf                      01;38;5;011
 .config                   01;38;5;011
@@ -363,20 +363,22 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .df                       01;38;5;015
 .du                       01;38;5;015
 .ls                       01;38;5;014      # try2difrNtE8 colrz of my growing number of LiSt filez as altern8ive to ubiquitous plain .txt filez
+.lsh                      01;38;5;006      # ICULHdWf:whIl mOst .ls fIlz abov wil stRt as just UTF8 [conf] 4m@z4 vim,l8r mA 4k off lIk this new `lshw` varE8n;
 .lst                      01;38;5;015
+.1st                      01;38;5;015
 .sym                      01;38;5;015
 .tiny                     01;38;5;015      # /etc/vim/ or /usr/bin/ or /usr/share/vim/ or /usr/share/doc/debhelper/examples/
 .out                      01;38;5;015
-.1st                      01;38;5;015
 .cat                      01;38;5;015
 .canna                    01;38;5;015
 .alias                    01;38;5;015      # /etc/(X11/fonts/*/|dictd/)?
 .allow                    01;38;5;015
 .fixed                    01;38;5;015
 .font                     01;38;5;015
-.utf8                     01;38;5;015
+.utf                      01;38;5;015
+.utf8                     01;38;5;015;48;5;004;3 # old .txt && ASCII should be part-safe to mut8 && migr8 into decent UTF-8 as better;  ## XprmNtng Italic SGRon2;##
 .UTF8                     01;38;5;015
-.utf-8                    01;38;5;015
+.utf-8                    01;38;5;113      # quA bLUE
 .UTF-8                    01;38;5;015
 .iso8859                  01;38;5;015
 .ISO8859                  01;38;5;015
@@ -396,6 +398,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .README                   01;38;5;015
 .ME                       01;38;5;015      # NumbFuck/curs/(form|menu)/READ.ME
 .BY                       01;38;5;015      # ~/.cpan/sources/MIRRORED.BY
+.inst                     01;38;5;015      # probably just UTF-8 or ASCII text-files containing any special install8ion instructions && notes
 .INSTALL                  01;38;5;015
 .NEWS                     01;38;5;015
 .TODO                     01;38;5;015
@@ -550,6 +553,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .nvidia-settings-rc       01;38;5;013
 .concalcvariables         01;38;5;005      # console calQl8or more like cl than orpie
 .captstate                01;38;5;013
+.CAP                      01;38;5;006      # IC4L6Her:added 4 AsusROG C6H BIOS upd8;
 #CC
 #CC
 .asm                      01;38;5;014      # src-cod&&PAUSE(Perl Authors Upload SErver)cfg file for putting modules on CPAN && .fbrc && .themes
@@ -835,7 +839,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .ZIP                      01;38;5;009
 .zip                      01;38;5;009
 .zoo                      01;38;5;009
-.zst                      01;38;5;009      # H4MM4MM4: new Zip format with Tar?
+.zst                      01;38;5;009      # H4MM4MM4:new Zip format (maybe with Tar && something else?);
 .tzst                     01;38;5;009
 .prt                      01;38;5;009
 .pak                      01;38;5;009
@@ -878,7 +882,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .gl                       01;38;5;164
 .ico                      01;38;5;164
 .icns                     01;38;5;164
-.mjpg                     01;38;5;164      # H4MM4MM4: new Moving JPEG format
+.mjpg                     01;38;5;164      # H4MM4MM4:new Moving JPEG format;
 .mjpeg                    01;38;5;164
 .jpeg                     01;38;5;164
 .JPG                      01;38;5;001
@@ -1113,7 +1117,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 #x                            G
 .y                        01;38;5;014
 #z                            B
-..                        01;38;5;013      # .. && ._ do work for plain ls but my lsd8 recolors final chars according to extra separ8or regexes
+#.                            M            # .. && ._ do work for plain ls but my lsd8 recolors final chars according to extra separ8or regexes
 ._                        01;38;5;005
 .00                       01;38;5;009      # \.[0-9A-F]    dotted versions
 .01                       01;38;5;003
@@ -1309,17 +1313,19 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .13.0-21-generic          01;38;5;172;48;5;004
 .13.0-17-generic          01;38;5;011;48;5;004
 .13.0-16-generic          01;38;5;010;48;5;004 # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.15.0-39-generic          01;38;5;009
-.15.0-38-generic          01;38;5;172
-.15.0-36-generic          01;38;5;011
-.15.0-34-generic          01;38;5;010
-.15.0-33-generic          01;38;5;014
-.15.0-32-generic          01;38;5;012
-.15.0-30-generic          01;38;5;013
-.15.0-29-generic          01;38;5;092
-.15.0-24-generic          01;38;5;009
-.15.0-23-generic          01;38;5;172
-.15.0-22-generic          01;38;5;011
+.15.0-43-generic          01;38;5;009
+.15.0-42-generic          01;38;5;172
+.15.0-39-generic          01;38;5;011
+.15.0-38-generic          01;38;5;010
+.15.0-36-generic          01;38;5;014
+.15.0-34-generic          01;38;5;012
+.15.0-33-generic          01;38;5;013
+.15.0-32-generic          01;38;5;092
+.15.0-30-generic          01;38;5;001
+.15.0-29-generic          01;38;5;003
+.15.0-24-generic          01;38;5;184
+.15.0-23-generic          01;38;5;002
+.15.0-22-generic          01;38;5;006
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
