--- a/.lrc
+++ b/.lrc
@@ -1313,19 +1313,21 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .13.0-21-generic              ob
 .13.0-17-generic              Yb
 .13.0-16-generic              Gb           # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.15.0-43-generic              R
-.15.0-42-generic              o
-.15.0-39-generic              Y
-.15.0-38-generic              G
-.15.0-36-generic              C
-.15.0-34-generic              B
-.15.0-33-generic              M
-.15.0-32-generic              p
-.15.0-30-generic              r
-.15.0-29-generic              O
-.15.0-24-generic              y
-.15.0-23-generic              g
-.15.0-22-generic              c
+.15.0-45-generic              R
+.15.0-44-generic              o
+.15.0-43-generic              Y
+.15.0-42-generic              G
+.15.0-39-generic              C
+.15.0-38-generic              B
+.15.0-36-generic              M
+.15.0-34-generic              p
+.15.0-33-generic              r
+.15.0-32-generic              O
+.15.0-30-generic              y
+.15.0-29-generic              g
+.15.0-24-generic              c
+.15.0-23-generic              b
+.15.0-22-generic              m
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
