--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='ICUL4lsh'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='J54MIhid'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -225,6 +225,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .btree
 .rules
 .ini
+.ini8                         yk
 .btx
 .emx
 .fnt                                       # old-skool txt-mode(DOS?)char-fontz kinda like 8x16.psfz wo the header(wich my`etfp -s -f -o`can load)
@@ -439,8 +440,9 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .ICEauthority
 .ccaldbImports
 .ftpquota
-.htaccess                     w
 .forward                      w
+.htaccess                     w
+.hidden                                    # in HTTPS://AskUbuntu.Com/questions/882562/how-can-i-change-or-hide-the-snap-directory as Nautilus dir hide list
 #kk
 #kk
 .prv8                         kkV          # immeD8 overide of just Foregrndcolr to 
