--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='J54MIhid'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='J6JMKONF'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -222,6 +222,9 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .ldif
 .list                                      # /etc/apt/* Debian/Ubuntu sources
 .distUpgrade                  O            # /etc/apt/* Debian/Ubuntu sources
+.apt                          O            # such apt && Perl -MCPAN -e "install ..." && Force are likely lists of commands needed for those package systems
+.pmei                         C
+.pmfi                         M
 .btree
 .rules
 .ini
@@ -267,6 +270,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 #OO
 .locale
 .conf                                      # config filz,(basic) play-list filz,shell-scripts,bookmarks,&& DOS-style executablz
+.dconf                                     # J6JMKNID:probably something like the output of `dconf dump /org/gnome/terminal/legacy/` to "load" l8r;
 .dmrc                                      # Dsktp Menu|Mngr? on Chun
 .gtkrc
 .toprc                                     # nstd of htop, can input "zxcVm1t0" then g[2-4] to go2 sepR8 wndoz&&du similR inputz then W writez cnfg
@@ -1315,21 +1319,25 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .13.0-21-generic              ob
 .13.0-17-generic              Yb
 .13.0-16-generic              Gb           # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.15.0-45-generic              R
-.15.0-44-generic              o
-.15.0-43-generic              Y
-.15.0-42-generic              G
-.15.0-39-generic              C
-.15.0-38-generic              B
-.15.0-36-generic              M
-.15.0-34-generic              p
-.15.0-33-generic              r
-.15.0-32-generic              O
-.15.0-30-generic              y
-.15.0-29-generic              g
-.15.0-24-generic              c
-.15.0-23-generic              b
-.15.0-22-generic              m
+.15.0-45-generic              Rg
+.15.0-44-generic              og
+.15.0-43-generic              Yg
+.15.0-42-generic              Gg
+.15.0-39-generic              Cg
+.15.0-38-generic              Bg
+.15.0-36-generic              Mg
+.15.0-34-generic              pg
+.15.0-33-generic              rg
+.15.0-32-generic              Og
+.15.0-30-generic              yg
+.15.0-29-generic              gg
+.15.0-24-generic              cg
+.15.0-23-generic              bg
+.15.0-22-generic              mg           # BlO /boot Linux kernelz versionz 5.0.0 onward started with Ubuntu 19.04 Disco Dingo, so dark grn bkgr 4.15 abov
+.0.0-17-generic               R
+.0.0-16-generic               o
+.0.0-15-generic               Y
+.0.0-13-generic               G
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
