--- a/.lsrc
+++ b/.lsrc
@@ -1,8 +1,8 @@
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
-# $VERSION='0.0';$d8VS='J54MIhid'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='J6JMKONF'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
-# This file was gNR8d by `lrc` Vers:0.0 d8VS:J1NLDshf on d8:J54MITKl. Please edit ~/.lrc and run `lrc` then `src` to see changes;
+# This file was gNR8d by `lrc` Vers:0.0 d8VS:J67M2UPD on d8:J6JMKQ7c. Please edit ~/.lrc and run `lrc` then `src` to see changes;
 # nOt:I'm pretty sure itz Chunz(!Takiz)`ls`&&`dircolors`th@cud!hndl (MULTI)?HARDLINK sO rEmMbr2kEp th@ lIn cmNtd out4her(&&kEptstng2cnfirm);
 # Keywords COLOR,OPTIONS,&& EIGHTBIT (honored by Slackware dircolors) are recognized but ignored; TERMz && XtNsionz syncd2 2016;
 # Copyright(C) 1996-2016 FreeSoftwareFound8ion,Inc. Copying and distribution of this file, with or without modific8ion, are permitted provided the
@@ -222,6 +222,9 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .ldif                     01;38;5;011
 .list                     01;38;5;011      # /etc/apt/* Debian/Ubuntu sources
 .distUpgrade              01;38;5;003      # /etc/apt/* Debian/Ubuntu sources
+.apt                      01;38;5;003      # such apt && Perl -MCPAN -e "install ..." && Force are likely lists of commands needed for those package systems
+.pmei                     01;38;5;014
+.pmfi                     01;38;5;013
 .btree                    01;38;5;011
 .rules                    01;38;5;011
 .ini                      01;38;5;011
@@ -267,6 +270,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 #OO
 .locale                   01;38;5;003
 .conf                     01;38;5;003      # config filz,(basic) play-list filz,shell-scripts,bookmarks,&& DOS-style executablz
+.dconf                    01;38;5;003      # J6JMKNID:probably something like the output of `dconf dump /org/gnome/terminal/legacy/` to "load" l8r;
 .dmrc                     01;38;5;003      # Dsktp Menu|Mngr? on Chun
 .gtkrc                    01;38;5;003
 .toprc                    01;38;5;003      # nstd of htop, can input "zxcVm1t0" then g[2-4] to go2 sepR8 wndoz&&du similR inputz then W writez cnfg
@@ -1315,21 +1319,25 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .13.0-21-generic          01;38;5;172;48;5;004
 .13.0-17-generic          01;38;5;011;48;5;004
 .13.0-16-generic          01;38;5;010;48;5;004 # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.15.0-45-generic          01;38;5;009
-.15.0-44-generic          01;38;5;172
-.15.0-43-generic          01;38;5;011
-.15.0-42-generic          01;38;5;010
-.15.0-39-generic          01;38;5;014
-.15.0-38-generic          01;38;5;012
-.15.0-36-generic          01;38;5;013
-.15.0-34-generic          01;38;5;092
-.15.0-33-generic          01;38;5;001
-.15.0-32-generic          01;38;5;003
-.15.0-30-generic          01;38;5;184
-.15.0-29-generic          01;38;5;002
-.15.0-24-generic          01;38;5;006
-.15.0-23-generic          01;38;5;004
-.15.0-22-generic          01;38;5;164
+.15.0-45-generic          01;38;5;009;48;5;002
+.15.0-44-generic          01;38;5;172;48;5;002
+.15.0-43-generic          01;38;5;011;48;5;002
+.15.0-42-generic          01;38;5;010;48;5;002
+.15.0-39-generic          01;38;5;014;48;5;002
+.15.0-38-generic          01;38;5;012;48;5;002
+.15.0-36-generic          01;38;5;013;48;5;002
+.15.0-34-generic          01;38;5;092;48;5;002
+.15.0-33-generic          01;38;5;001;48;5;002
+.15.0-32-generic          01;38;5;003;48;5;002
+.15.0-30-generic          01;38;5;184;48;5;002
+.15.0-29-generic          01;38;5;002;48;5;002
+.15.0-24-generic          01;38;5;006;48;5;002
+.15.0-23-generic          01;38;5;004;48;5;002
+.15.0-22-generic          01;38;5;164;48;5;002 # BlO /boot Linux kernelz versionz 5.0.0 onward started with Ubuntu 19.04 Disco Dingo, so dark grn bkgr 4.15 abov
+.0.0-17-generic           01;38;5;009
+.0.0-16-generic           01;38;5;172
+.0.0-15-generic           01;38;5;011
+.0.0-13-generic           01;38;5;010
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
