--- a/.lrc
+++ b/.lrc
@@ -1334,11 +1334,12 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .15.0-24-generic              cg
 .15.0-23-generic              bg
 .15.0-22-generic              mg           # BlO /boot Linux kernelz versionz 5.0.0 onward started with Ubuntu 19.04 Disco Dingo, so dark grn bkgr 4.15 abov
-.0.0-19-generic               R
-.0.0-17-generic               o
-.0.0-16-generic               Y
-.0.0-15-generic               G
-.0.0-13-generic               C
+.0.0-20-generic               R
+.0.0-19-generic               o
+.0.0-17-generic               Y
+.0.0-16-generic               G
+.0.0-15-generic               C
+.0.0-13-generic               B
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
